welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: '<-' expected but ')' found.
    for (compteur<(decalage+5)%getMondeHauteur() to getMondeHauteur()-1 ){
                                                                        ^Array2:26: error: illegal start of simple expression
  }
  ^